# ragonometrics

./: .dockerignore  .gitignore  Dockerfile  README.md  Untitled.ipynb  alembic.ini  compose.yml  config.toml  pyproject.toml
alembic/: env.py
deploy/: README.md
docs/: agentic.md  architecture.md  cloud.md  configuration.md  contributing.md  econ_schema.md  onboarding.md  workflow.md
papers/: rename_log.csv  rename_log_author_year.csv
ragonometrics/: __init__.py
reports/: audit-workflow-report-34c88b2bf0194f5b9b72793845290a52.md  audit-workflow-report-51af9a22de5b4c01a31c56930f1bd3ce.tex  audit-workflow-report-849b3a6f27d3440cba766f9526c28dcd.md  audit-workflow-report-e53e1c45434547afaedf7a0d079d5615.xdv  prep-manifest-3733c1223ccc4a2a91986c67a110aac3.json  prep-manifest-397ccbe2a07b418abce518169ac9aeaf.json  prep-manifest-55a6a9fdd6fb45daa618b34a346cbbc7.json  prep-manifest-849b3a6f27d3440cba766f9526c28dcd.json  prep-manifest-c717c7e977524a1fa4158b8387a15a9b.json  prep-manifest-e53e1c45434547afaedf7a0d079d5615.json  prep-manifest-efb424428e614b7fa8c01bfc1a1eb807.json  workflow-report-3733c1223ccc4a2a91986c67a110aac3.json  workstream-comparison-icss-gpt5-vs-gpt5-nano.json  workstream-comparison-icss-gpt5-vs-gpt5-nano.tex
src/: benchmark.py  config.py  crossref_cache.py  entrypoints.py  indexer.py  io_loaders.py  main.py  manifest.py  metadata.py  pipeline.py  prompts.py  query_cache.py  retriever.py  rq_queue.py  streamlit_app.py
tests/: conftest.py  test_author_lookup.py  test_citation_network_service.py  test_cli_web.py  test_config.py  test_db_connection.py  test_eval.py  test_llm_runtime.py  test_manifest.py  test_metadata.py  test_multi_paper_chat_service.py  test_no_runtime_ddl.py  test_openai_response_text.py  test_openalex.py  test_openalex_store.py  test_paper_compare_service.py  test_query_cache.py  test_retrieval_quality.py  test_retriever.py  test_rq_queue_openalex_refresh.py  test_streamlit_structured_export.py  test_top_k_context.py  test_utils.py  test_web_api.py  (+7 more)
(+303 files in other folders)
