[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragonomics"
version = "0.1.0"
description = "Simple RAG pipeline for economics papers"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.0.0",
  "streamlit>=1.0.0",
  "requests>=2.28.0",
  "networkx>=3.0",
  "plotly>=5.0.0",
  "faiss-cpu>=1.7.3",
  "redis>=4.5.0",
  "rq>=1.15.0",
  "backoff>=2.2.1",
  "psycopg2-binary>=2.9.6",
  "rank_bm25>=0.2.2",
  "numpy>=1.25",
  "jiter>=0.13.0",
  "pydantic-core>=0.11.0",
  "pydantic>=2.0.0",
]
  

[project.optional-dependencies]
# Developer/test dependencies
dev = [
  "pytest>=7.0.0",
]

# Optional OCR/image dependencies (install only if you need OCR fallback)
ocr = [
  "pillow>=9.0.0",
  "pdf2image>=1.16.0",
  "pytesseract>=0.3.10",
]


[project.scripts]
ragonomics = "ragonomics.main:main"
ragonomics-cli = "ragonomics.cli:main"

[tool.setuptools]
packages = ["ragonomics"]

[tool.setuptools.package-dir]
ragonomics = "src"
